fix z-index & popup

--- a/trunk/themes/css/blue.css
+++ b/trunk/themes/css/blue.css
@@ -398,7 +398,7 @@
 		position: relative;
 		top: 0;
 		left: 0;
-		z-index: 100;
+		z-index: 0;
 		}
 		
 	#pgmenu li
